--- a/server/templates/dashboard.html
+++ b/server/templates/dashboard.html
@@ -21,7 +21,7 @@
 				return 'green';
 				break;
 			case '1': case '2': case '3': case '4': case '5':
-			case '6': case '7': case '8': case '9': case '/': case '|':
+			case '6': case '7': case '8': case '9': case '/': case '|': case '<': case '>':
 				return 'orange';
 				break;
 			default:
