--- a/server/templates/dashboard.html
+++ b/server/templates/dashboard.html
@@ -387,7 +387,9 @@
 <hr />
 <a href="/befehlgui" target="_blank">Order Delivery</a>
 <span>&nbsp;|&nbsp;</span>
-<a href="/signaldisp" target="_blank">Alternative signal display</a>
+<a href="/signaldisp" target="_blank">Alternative Signal Display</a>
+<span>&nbsp;|&nbsp;</span>
+<a href="/signaladdisp" target="_blank">Additional Information</a>
 <span>&nbsp;|&nbsp;</span>
 <a href="javascript:;" onclick="render('batch_proc'); document.getElementById('progress').innerHTML = '';">Batch Process</a>
 <div class="bdr" id="batch_proc" style="display: none;">
