--- a/server/templates/paxinner.html
+++ b/server/templates/paxinner.html
@@ -9,7 +9,7 @@
     </tr>
 	{% for i in tdata %}
     <tr>
-		<td>{{ i[0] }}</td>
+		<td>{{ i[0] | safe }}</td>
 		<td>{{ i[1] }}</td>
 		<td>{{ i[2] }}</td>
 		<td>{{ i[3] | safe }}</td>
